--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Udacity's FEND Project #4  \r Evaluate news articles with NLP",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node src/server/index.js",
     "build-dev": "webpack-dev-server --config webpack.dev.js --open",
     "build-prod": "rm -rf dist && webpack --config webpack.prod.js && npm run start"
