feat: Integrate API + Add tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node src/server/index.js",
+    "start-dev": "nodemon src/server/index.js",
     "build-dev": "webpack-dev-server --config webpack.dev.js --open",
     "build-prod": "rm -rf dist && webpack --config webpack.prod.js && npm run start"
   },
@@ -33,14 +34,20 @@
     "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.11.0",
     "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.2.1",
+    "supertest": "^4.0.2",
     "terser-webpack-plugin": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "follow-redirects": "^1.13.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "workbox-webpack-plugin": "^5.1.3"
